--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "linkedListwithfun.C": "cpp",
         "STACKLIN.C": "cpp",
         "QUELINK.C": "cpp",
-        "tempCodeRunnerFile.C": "cpp"
+        "tempCodeRunnerFile.C": "cpp",
+        "CIRLIN_1.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
